--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,7 @@
 {
+  "name": "swkoubou/hackathon2015winter-b",
   "version": "0.0.0",
+  "authors": [],
   "license": "MIT",
   "private": true,
   "ignore": [
