--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "client",
+  "name": "hackathon2015winter-b",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "async": "^0.9.0",
-    "body-parser": "~1.10.1",
-    "bootstrap-sass": "~3.3.3",
-    "connect-mongo": "^0.7.0",
+    "express": "~4.9.0",
+    "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
+    "morgan": "~1.3.0",
+    "serve-favicon": "~2.1.3",
+    "debug": "~2.0.0",
+    "ejs": "~0.8.5",
+    "async": "^0.9.0",
+    "connect-mongo": "^0.7.0",
     "debug": "~2.1.1",
     "ejs": "~1.0.0",
     "express": "~4.10.6",
     "express-session": "~1.10.3",
-    "mocha": "^2.1.0",
     "mongoose": "^3.8.23",
     "morgan": "~1.5.1",
     "passport": "^0.2.1",
