--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "client",
+  "name": "hackathon2015winter-b",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "async": "^0.9.0",
-    "body-parser": "~1.10.1",
-    "bootstrap-sass": "~3.3.3",
-    "connect-mongo": "^0.7.0",
-    "cookie-parser": "~1.3.3",
+    "body-parser": "~1.12.0",
+    "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
-    "ejs": "~1.0.0",
-    "express": "~4.10.6",
-    "express-session": "~1.10.3",
-    "mocha": "^2.1.0",
-    "mongoose": "^3.8.23",
+    "ejs": "~2.3.1",
+    "express": "~4.12.2",
     "morgan": "~1.5.1",
-    "passport": "^0.2.1",
     "serve-favicon": "~2.2.0",
-    "socket.io": "~1.3.5",
-    "underscore": "^1.8.2",
-    "underscore.string": "^3.0.3"
+    "async": "~0.9.0",
+    "underscore": "~1.8.2",
+    "express-session": "~1.10.4",
+    "underscore.string": "~3.0.3",
+    "passport": "~0.2.1",
+    "connect-mongo": "~0.7.0",
+    "mongoose": "~3.8.25",
+    "socket.io": "~1.3.5"
   }
 }
