--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "passport": "~0.2.1",
     "connect-mongo": "~0.7.0",
     "mongoose": "~3.8.25",
-    "socket.io": "~1.3.5"
+    "socket.io": "~1.3.5",
+    "config": "~1.12.0",
+    "passport-twitter": "~1.0.3"
   }
 }
