--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "jquery": "~2",
-    "underscore": "~1"
+    "underscore": "~1",
+    "materialize": "~0.95.3"
   }
 }
